# ai_engineer_agentic

1_foundations/: 3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb  app.py
1_foundations/me/: summary2.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: email_agent.py
3_crew/coder2/: README.md  pyproject.toml
3_crew/coder2/output/: code_and_output.txt
3_crew/coder2/src/coder2/: crew.py  main.py
3_crew/coder2/src/coder2/config/: agents.yaml  tasks.yaml
3_crew/coder2/src/coder2/tools/: __init__.py  docker_python_tool.py
3_crew/debate_2/: README.md  pyproject.toml
3_crew/debate_2/output/: decide2.md  oppose2.md  propose2.md
3_crew/debate_2/src/debate_2/: crew.py  main.py
3_crew/debate_2/src/debate_2/config/: agents.yaml  tasks.yaml
3_crew/engineering_team2/: README.md  pyproject.toml
3_crew/engineering_team2/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/engineering_team2/src/engineering_team2/: crew.py  main.py
3_crew/engineering_team2/src/engineering_team2/config/: agents.yaml
3_crew/fin_researcher/: README.md  pyproject.toml
3_crew/fin_researcher/output/: fin_report.md
3_crew/fin_researcher/src/fin_researcher/: crew.py  main.py
3_crew/fin_researcher/src/fin_researcher/config/: agents.yaml  tasks.yaml
3_crew/stock_picker/: pyproject.toml
3_crew/stock_picker/memory/: latest_kickoff_task_outputs.db
3_crew/stock_picker/src/stock_picker/: crew.py
3_crew/stock_picker2/: pyproject.toml
3_crew/stock_picker2/memory/: latest_kickoff_task_outputs.db
3_crew/stock_picker2/memory/memory/memories.lance/_deletions/: 1-4-1082251342641428841.arrow  10-15-5778485565920427020.arrow  2-6-2337829615117110262.arrow
3_crew/stock_picker2/memory/memory/memories.lance/_transactions/: 0-6f7f51bb-7e54-4646-b151-e37132182f89.txn  1-dab07a27-fd89-4b0e-b794-84149ed237f4.txn  10-17a22896-f693-473f-8d77-81925903e011.txn  11-bbbfbc46-d30b-442c-8864-365647da9604.txn  12-18f6436f-76c6-4421-af37-c0557dbc3837.txn  13-b78a622d-1dab-423d-9602-5cf1b80a9d0e.txn  14-900f2e52-9146-408b-b755-fca9b989cdab.txn  15-522bbd09-cc77-4c45-9d15-a9608f85be0b.txn  16-835228e5-8220-4e6e-b159-b87db789f480.txn  17-a44be46b-d31a-4dcd-9bfe-41700b7ddd5f.txn  2-e346a49d-2d5d-4de2-a376-4fc486dc2c62.txn  3-004b54e8-3ed8-40b5-8815-4689eb2efb1a.txn  4-bd1cfe69-bac3-4a79-b665-453821c56bdc.txn  5-40d404c7-fbbe-4d16-a9e3-6b99291c653c.txn  (+4 more)
3_crew/stock_picker2/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker2/src/stock_picker2/: crew.py  main.py
3_crew/stock_picker2/src/stock_picker2/tools/: push_tool.py
(+2 files in other folders)
