[project]
name = "coder2"
version = "0.1.0"
description = "coder2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
coder2 = "coder2.main:run"
run_crew = "coder2.main:run"
train = "coder2.main:train"
replay = "coder2.main:replay"
test = "coder2.main:test"
run_with_trigger = "coder2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
