[project]
name = "debate_2"
version = "0.1.0"
description = "debate_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.14.4",
]

[project.scripts]
debate_2 = "debate_2.main:run"
run_crew = "debate_2.main:run"
train = "debate_2.main:train"
replay = "debate_2.main:replay"
test = "debate_2.main:test"
run_with_trigger = "debate_2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
