[project]
name = "engineering_team2"
version = "0.1.0"
description = "engineering_team2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.14.4",
    "gradio>=6.17.3",
]

[project.scripts]
engineering_team2 = "engineering_team2.main:run"
run_crew = "engineering_team2.main:run"
train = "engineering_team2.main:train"
replay = "engineering_team2.main:replay"
test = "engineering_team2.main:test"
run_with_trigger = "engineering_team2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
