[project]
name = "fin_researcher"
version = "0.1.0"
description = "fin_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "litellm>=1.87.0",
]

[project.scripts]
fin_researcher = "fin_researcher.main:run"
run_crew = "fin_researcher.main:run"
train = "fin_researcher.main:train"
replay = "fin_researcher.main:replay"
test = "fin_researcher.main:test"
run_with_trigger = "fin_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
